# app/Models/Patient.php
@@ -8,4 +8,13 @@ use Illuminate\Database\Eloquent\Model;
 class Patient extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'name',
+        'date_of_birth',
+        'gender',
+        'address',
+        'phone',
+        'email',
+    ];
 }
